--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "js-sha512": "^0.8.0",
+    "md5": "^2.3.0",
     "mongoose": "^5.12.2",
     "mongoose-encryption": "^2.0.3"
   }
